"""Thin wrapper for Tree-sitter (stub)."""
class TreeSitterWrapper:
    def parse_file(self, path):
        ...
